--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hubot-shipit": "^0.2.1",
     "hubot-slack": "slackhq/hubot-slack",
     "needle": "^1.6.0",
+    "object-assign": "^4.1.1",
     "request": "^2.81.0"
   },
   "engines": {
